# tesela

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG_graph_view_fix.md  CHANGELOG_powersearch_fix.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIXES_SUMMARY.md  PHASE2_COMPLETE.md  README.md  RELEASE.md  STRUCTURE.md  architecture.md  plan.md  repository.yaml  tesela.db  tesela.db-shm  tesela.db-wal  tesela.toml
.bench/: gen-scorecard-report.mjs
crates/tesela-backup/: Cargo.toml
crates/tesela-backup/benches/: backup.rs
crates/tesela-backup/src/: archive.rs  destination.rs  encrypt.rs  error.rs  git.rs  lib.rs  manifest.rs  retention.rs  validate.rs
crates/tesela-backup/tests/: authority_capture.rs  git_destination.rs  retention.rs
crates/tesela-cli/: Cargo.toml
crates/tesela-cli/src/: backfill_task.rs  import_logseq.rs  import_obsidian.rs  import_org.rs  main.rs  mosaic_notes.rs  recover_logseq_dates.rs  repair_daily_tags.rs  repair_garbled_blocks.rs
crates/tesela-cli/tests/: integration.rs
crates/tesela-core/: Cargo.toml
crates/tesela-core/benches/: inbox_query.rs  index.rs  list_notes.rs  typed_blocks.rs
crates/tesela-core/src/: block.rs  config.rs  daily.rs  error.rs  export.rs  import_logseq.rs  indexer.rs  lib.rs  lifecycle.rs  link.rs  nlp_lift.rs  note.rs  note_tree.rs  property.rs  query.rs  recurrence.rs  regex_cache.rs  system_widgets.rs  tag.rs  tag_rewrite.rs  types.rs
crates/tesela-core/src/db/: mod.rs  queries.rs  schema.rs  sqlite.rs
crates/tesela-core/src/export/: markdown.rs  mod.rs
crates/tesela-core/src/storage/: filesystem.rs  markdown.rs  mod.rs
crates/tesela-core/src/traits/: link_graph.rs  mod.rs  note_store.rs  plugin.rs  search_index.rs
crates/tesela-core/tests/: kanban_source_5k_timing.rs  nlp_lift_conformance.rs  property_override_conformance.rs  query_conformance.rs  recurrence_conformance.rs  typed_blocks_query_equivalence.rs
crates/tesela-core/tests/fixtures/: inline-span-conformance.json  nlp-lift-conformance.json  property-override-conformance.json  query-conformance.json  recurrence-conformance.json
crates/tesela-fixtures/: Cargo.toml
crates/tesela-fixtures/src/: content.rs  lib.rs  rng.rs
crates/tesela-fixtures/tests/: deterministic.rs  stats.rs
crates/tesela-loro-spike/: Cargo.toml
crates/tesela-loro-spike/src/: apply_latency.rs  move_parity.rs  oplog_import.rs  snapshot_size.rs
crates/tesela-mcp/: Cargo.toml
crates/tesela-mcp/src/: lib.rs  main.rs  mosaic_engine.rs  tools.rs  transport.rs
crates/tesela-mcp/tests/: integration.rs
crates/tesela-plugins/: Cargo.toml
crates/tesela-plugins/src/: lib.rs  lua.rs  wasm.rs
crates/tesela-relay/: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  SMOKE.md  docker-compose.yml
crates/tesela-relay/ha-addon/: Dockerfile  README.md  build.yaml  config.yaml  run.sh
crates/tesela-relay/scripts/: smoke.sh
crates/tesela-relay/src/: apns.rs  handlers.rs  lib.rs  main.rs  state.rs  store.rs
crates/tesela-relay/tests/: client_e2e.rs  conformance.rs  convergence_harness.rs  loro_cutover_e2e.rs  recovery_e2e.rs  snapshot_chunking.rs  soak.rs
crates/tesela-server/: Cargo.toml
crates/tesela-server/benches/: http.rs
crates/tesela-server/src/: asr_engine.rs  backup_scheduler.rs  error.rs  lib.rs  main.rs  notifications.rs  presence_relay.rs  state.rs  sync_relay.rs
crates/tesela-server/src/reminders/: auto.rs  darwin.rs  mod.rs
crates/tesela-server/src/routes/: agenda.rs  attachments.rs  calendar.rs  commands.rs  data_ops.rs  history.rs  keymap.rs  mod.rs  notes.rs  peer_sync.rs  relay.rs  search.rs  search_query.rs  sync.rs  tags.rs  transcription.rs  types.rs  views.rs  ws.rs
crates/tesela-server/tests/: block_granular_write.rs  block_subtree_move.rs  daily_filter_includes_date_slug_without_tag.rs  http_backup_round_trip.rs  import_product_test.rs  index_passthrough_golden.rs  keymap_config_routes.rs  node_relations.rs  put_base_diff.rs  restore_drill.rs  scheduled_backup_status.rs  serve_in_process.rs  set_property_engine.rs  shutdown_backup.rs  snapshot_bootstrap_converge.rs  task_toggle_stale_state.rs  views_registry_routes.rs
crates/tesela-server/tests/common/: mod.rs
crates/tesela-sync/: Cargo.toml
crates/tesela-sync-ffi/: Cargo.toml
crates/tesela-sync-ffi/src/: lib.rs
crates/tesela-sync/examples/: two_node.rs
crates/tesela-sync/src/: device.rs  diff.rs  discovery.rs  error.rs  group.rs  lib.rs  recovery.rs  schema.rs
crates/tesela-sync/src/crypto/: aead.rs  keys.rs  mod.rs  pairing.rs  recovery.rs  relay_auth.rs
crates/tesela-sync/src/engine/: applied.rs  cursor.rs  dual_engine.rs  hydration.rs  loro_engine.rs  mod.rs  sqlite_engine.rs
crates/tesela-sync/src/engine/loro_engine/: apply.rs  index.rs  prop_containers.rs  relocation.rs  render.rs  tests.rs  twins.rs
crates/tesela-sync/src/hlc/: mod.rs  timestamp.rs
crates/tesela-sync/src/migrate/: mod.rs
crates/tesela-sync/src/oplog/: mod.rs  op.rs  parked.rs  retention.rs
crates/tesela-sync/src/rebuild/: mod.rs
crates/tesela-sync/src/transport/: lan.rs  loopback.rs  mod.rs  relay.rs
crates/tesela-sync/src/wire/: envelope.rs  mod.rs
crates/tesela-sync/tests/: concurrent_whole_body_clobber.rs  convergence.rs  cursor_presence.rs  deposit_strand.rs  disjoint_device_catchup.rs  disjoint_history_revert.rs  disjoint_splice_convergence.rs  import_hydration.rs  loro_cutover_spike.rs  partial_delta_needs_base.rs  prop_representation_convergence.rs  relay_apply_report.rs  relay_inbound_rebase.rs  snapshot_merge_keeps_local.rs
crates/tesela-tui/: Cargo.toml
crates/tesela-tui/src/: action.rs  app.rs  event.rs  handler.rs  main.rs  theme.rs
crates/tesela-tui/src/state/: listing.rs  mod.rs  mode.rs  search.rs
crates/tesela-tui/src/view/: editing.rs  fuzzy_finder.rs  help.rs  listing.rs  main_menu.rs  mod.rs  new_note.rs  note_preview.rs  search.rs  status_bar.rs  tag_picker.rs
crates/tesela-tui/src/widgets/: graph.rs  mod.rs  outliner.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1070 files in other folders)
