[workspace]
members = ["crates/tesela-core"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
thiserror = "2"
tracing = "0.1"

# Markdown and frontmatter parsing
pulldown-cmark = "0.12"
gray_matter = "0.2"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# File operations
walkdir = "2"
sha2 = "0.10"
dirs = "5"
regex = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

# File watching
notify = "8"
tokio-util = { version = "0.7", features = ["rt"] }

# Testing
tempfile = "3"
tokio-test = "0.4"
