[workspace]
members = ["crates/tesela-core", "crates/tesela-cli", "crates/tesela-tui", "crates/tesela-mcp", "crates/tesela-plugins"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
thiserror = "2"
tracing = "0.1"

# Markdown and frontmatter parsing
pulldown-cmark = "0.12"
gray_matter = "0.2"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# File operations
walkdir = "2"
sha2 = "0.10"
dirs = "5"
regex = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

# File watching
notify = "8"
tokio-util = { version = "0.7", features = ["rt"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
dialoguer = "0.11"
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
fuzzy-matcher = "0.3"
tokio-stream = "0.1"
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Plugins
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# Testing
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
