[workspace]
members = ["crates/tesela-core", "crates/tesela-cli", "crates/tesela-tui", "crates/tesela-mcp", "crates/tesela-plugins", "crates/tesela-server", "crates/tesela-backup", "crates/tesela-fixtures", "crates/tesela-fixtures-cli", "crates/tesela-sync", "crates/tesela-sync-ffi"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
thiserror = "2"
tracing = "0.1"

# Markdown and frontmatter parsing
pulldown-cmark = "0.12"
gray_matter = "0.2"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# File operations
walkdir = "2"
sha2 = "0.10"
dirs = "5"
regex = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

# File watching
notify = "8"
tokio-util = { version = "0.7", features = ["rt"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
dialoguer = "0.11"
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
fuzzy-matcher = "0.3"
tokio-stream = "0.1"
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Plugins
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# HTTP server
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Encryption + Keychain (used by tesela-backup)
age = "0.11"
keyring = { version = "3", features = ["apple-native"] }

# Sync substrate (used by tesela-sync)
postcard = { version = "1", features = ["alloc"] }
uhlc = "0.8"
blake3 = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
futures = "0.3"
mdns-sd = { version = "0.13", default-features = false, features = ["async"] }
base64 = "0.22"
if-addrs = "0.13"
chacha20poly1305 = "0.10"
uniffi = "0.31"

# Testing + benchmarking
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
