[package]
name = "tesela-desktop"
version = "0.1.2"
edition = "2021"
description = "Tesela desktop app — native shell around the /g web UI with an embedded loopback tesela-server."
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
# Single-instance: a 2nd launch focuses the existing window instead of
# spawning a parallel process. The embedded server holds a single-writer
# flock on the mosaic, so a 2nd process would deadlock on startup (#202).
tauri-plugin-single-instance = { version = "2", features = [] }
# Auto-update (tesela-ejn.1): checks the GitHub Releases `latest.json`
# manifest (see tauri.conf.json plugins.updater) and, if newer, downloads +
# installs the signed update artifact, then relaunches via the tauri-core
# `AppHandle::restart()` (no separate process plugin needed for that).
tauri-plugin-updater = { version = "2", features = [] }
# L4: the server runs IN-PROCESS via `tesela_server::serve` on our own tokio
# runtime, instead of being spawned as a child binary. Pulls whisper-rs/objc2
# into this binary's link (previously linked only into the child).
tesela-server = { path = "../crates/tesela-server" }
tesela-core = { path = "../crates/tesela-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
