[package]
name = "tesela-backup"
version = "0.1.0"
edition = "2021"

# Skip the lib's libtest pass during `cargo bench` so criterion's
# `--save-baseline` flag isn't intercepted by an unrelated harness.
[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
fs2 = "0.4"
tempfile = { workspace = true }
age = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }
tesela-fixtures = { path = "../tesela-fixtures" }

[[bench]]
name = "backup"
harness = false
