[package]
name = "tesela-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
gray_matter.workspace = true
pulldown-cmark.workspace = true
sha2.workspace = true
walkdir.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
dirs.workspace = true
regex.workspace = true
sqlx.workspace = true
notify.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
