[package]
name = "tesela-fixtures"
version = "0.1.0"
edition = "2021"

# Skip the lib's libtest pass during `cargo bench` so criterion's
# `--save-baseline` flag isn't intercepted by an unrelated harness.
[lib]
bench = false

[dependencies]
tesela-core = { path = "../tesela-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
