[package]
name = "tesela-loro-spike"
version = "0.1.0"
edition = "2021"
publish = false
description = "Throwaway spike crate measuring Loro CRDT behavior on representative Tesela data — supports the 2026-05-27 migration spike. NOT shipped; delete after the migration decision is made and the dual-write scaffolding lands (or after the migration is abandoned)."

[dependencies]
loro = "1.10"
tesela-core = { path = "../tesela-core" }
uuid = { workspace = true, features = ["v4"] }

[[bin]]
name = "spike-snapshot-size"
path = "src/snapshot_size.rs"

[[bin]]
name = "spike-apply-latency"
path = "src/apply_latency.rs"

[[bin]]
name = "spike-move-parity"
path = "src/move_parity.rs"

[[bin]]
name = "spike-oplog-import"
path = "src/oplog_import.rs"
