[package]
name = "tesela-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "tesela_mcp"
path = "src/lib.rs"
bench = false

[[bin]]
name = "tesela-mcp"
path = "src/main.rs"
bench = false

[dependencies]
tesela-core = { path = "../tesela-core" }
tesela-plugins = { path = "../tesela-plugins" }
tesela-sync = { path = "../tesela-sync" }
libc = "0.2"
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
