[package]
name = "tesela-relay"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge sync relay for Tesela. Per-group FIFO of opaque AEAD-sealed envelopes; clients verify hijack-protection via signed-intent re-check on first connection."

[[bin]]
name = "tesela-relay"
path = "src/main.rs"

[dependencies]
# HTTP + async
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Storage
sqlx.workspace = true

# CLI — add `env` feature on top of the workspace default (`derive`)
# so the binary can read `--bind` / `--db` / `--admin-token` from
# environment variables for Docker-friendly config.
clap = { workspace = true, features = ["env"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time + logging + errors
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
thiserror.workspace = true
anyhow = "1"

# Crypto for MAC verification + intent storage
sha2.workspace = true
hmac = "0.12"

# Encoding
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
# Integration tests via reqwest against a spawned in-process relay.
reqwest.workspace = true
