[package]
name = "tesela-relay"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge sync relay for Tesela. Per-group FIFO of opaque AEAD-sealed envelopes; clients verify hijack-protection via signed-intent re-check on first connection."

[[bin]]
name = "tesela-relay"
path = "src/main.rs"

[dependencies]
# Canonical wire primitives — MAC verify, intent format, body hash —
# shared with every client so client + relay can't drift.
tesela-sync = { path = "../tesela-sync" }

# HTTP + async
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Storage
sqlx.workspace = true

# CLI — add `env` feature on top of the workspace default (`derive`)
# so the binary can read `--bind` / `--db` / `--admin-token` from
# environment variables for Docker-friendly config.
clap = { workspace = true, features = ["env"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time + logging + errors
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
thiserror.workspace = true
anyhow = "1"

# Crypto for MAC verification + intent storage
sha2.workspace = true
hmac = "0.12"

# Encoding
base64 = "0.22"
hex = "0.4"

# APNs silent-push proxy (sync durability P3c). Outbound HTTP/2 to
# api.push.apple.com (Apple rejects HTTP/1.1, hence the explicit http2
# feature on top of the workspace rustls base) + an ES256 provider-token
# JWT signed with the operator's .p8 key (jsonwebtoken uses the `ring`
# already in-tree). Both are optional at runtime: unset APNS_* env → the
# relay runs exactly as before, no push.
reqwest = { workspace = true, features = ["http2"] }
jsonwebtoken = "9"

[dev-dependencies]
# Integration tests use reqwest (a runtime dep above) against a spawned
# in-process relay, plus tesela-sync's primitives so client + relay
# can't drift on the wire format.
rand.workspace = true
tempfile.workspace = true
