[package]
name = "tesela-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "tesela_server"
path = "src/lib.rs"
# The unit tests (helpers, in-process route checks) live in the lib now;
# keep them out of the bench harness pass like the bin below.
bench = false

[[bin]]
name = "tesela-server"
path = "src/main.rs"
# Skip the bin's libtest pass during `cargo bench` so criterion's
# `--save-baseline` flag isn't intercepted by an unrelated harness.
bench = false

[dependencies]
tesela-core = { path = "../tesela-core" }
# Hex encode/decode for relay status output (device ids in warnings).
hex = "0.4"
tesela-backup = { path = "../tesela-backup" }
tesela-sync = { path = "../tesela-sync" }
# Base64 the WS-upgrade MAC headers for the presence relay client (nonce, mac).
base64 = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono.workspace = true
regex.workspace = true
reqwest = { workspace = true }
futures = { workspace = true }
# Phase 26 — Whisper inference via whisper.cpp Rust bindings. The
# crate compiles whisper.cpp from source via build.rs; on macOS it
# picks up Metal acceleration automatically.
whisper-rs = { version = "0.13", default-features = false, features = ["metal"] }
hound = "3.5"
postcard.workspace = true
uuid.workspace = true
blake3.workspace = true
clap = { workspace = true }
if-addrs.workspace = true
rand = { workspace = true }
# Presence relay WS client (Phase 3b Stage 2): a long-lived WebSocket to the CF
# relay's /groups/{id}/presence/ws. `rustls-tls-webpki-roots` enables wss:// to
# Cloudflare (matching the workspace reqwest's rustls-tls stack); default
# features keep `connect` + `handshake`. Also covers the dev-only round-trip test.
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# Phase 12.1 — Apple Reminders bidirectional sync. EventKit is a macOS/iOS
# framework, so the FFI is gated behind cfg(target_os = "macos"). Linux/
# Windows builds compile a no-op stub that returns "unsupported platform"
# from the sync endpoint.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSCalendar",
    "NSDate",
    "NSError",
    "NSObject",
    "NSPredicate",
    "NSString",
    "NSUUID",
] }
objc2-event-kit = { version = "0.3", features = [
    "EKAlarm",
    "EKCalendar",
    "EKCalendarItem",
    "EKEventStore",
    "EKObject",
    "EKRecurrenceDayOfWeek",
    "EKRecurrenceEnd",
    "EKRecurrenceRule",
    "EKReminder",
    "EKTypes",
] }
block2 = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
# Implement the #[async_trait] SyncEngine trait for in-test failing stubs
# (record_local error propagation tests in routes/notes.rs).
async-trait = { workspace = true }
criterion = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
tesela-fixtures = { path = "../tesela-fixtures" }
# Spawn an in-process relay to exercise the live sync_relay::tick snapshot
# deposit/bootstrap wiring (no cycle: tesela-relay doesn't depend on tesela-server).
tesela-relay = { path = "../tesela-relay" }
# Decode engine version vectors in the restore drill (lineage assertions:
# peer set + per-peer counters). Same version tesela-sync already pulls in.
loro = "1.10"

[[bench]]
name = "http"
harness = false
