[package]
name = "tesela-sync-ffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bridge crate exposing tesela-sync to Swift / Kotlin / Python."

[lib]
# `staticlib` lets us link into the iOS framework / Android shared lib.
# `cdylib` lets host-side bindings tests load it as a dynamic lib.
# `lib` keeps `cargo test` happy.
crate-type = ["staticlib", "cdylib", "lib"]
bench = false

[dependencies]
tesela-sync = { path = "../tesela-sync" }
# `record_note_diff` needs `parse_note` to parse the new + previous
# body into NoteTrees before calling `diff_note_trees`.
tesela-core = { path = "../tesela-core" }
uniffi = { workspace = true, features = ["tokio"] }
thiserror.workspace = true
# Tokio needed for the async UniFFI runtime that drives the
# RelayClient + engine I/O. `rt-multi-thread` lets iOS Swift await
# without blocking the host main thread (UniFFI schedules each call
# onto this runtime).
tokio = { workspace = true }
# RelayClient.new takes a `reqwest::Url`. The wrapper here re-parses
# from a Swift `String`, so we need direct access to the type.
reqwest = { workspace = true }
# Outbound tick postcard-encodes the `Vec<EncodedOp>` batch into the
# SyncEnvelope ciphertext, matching the Mac's tick.
postcard = { workspace = true }
# Presence FFI (Option B): base64-encode the MAC nonce + MAC, generate a
# fresh 16-byte MAC nonce, and derive Serialize/Deserialize on the local
# OuterPayload that byte-matches presence_relay.rs's wire form. `postcard`
# (above) serializes that struct; the crypto goes through tesela-sync's
# high-level fns, so no low-level crypto crates are needed here.
base64 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# The Phase B WS-delta round-trip test opens two real LoroEngine handles
# (open_loro takes an on-disk mosaic path), so it needs throwaway dirs.
tempfile = { workspace = true }
# `detect_nlp_lifts` (tesela-ug7) tests build a registry_json fixture with
# `serde_json::json!` and assert on the returned JSON.
serde_json = { workspace = true }
# The tick_inbound failure-handling tests drive SyncCoordinator against a
# real in-process relay (mirrors tesela-server's sync_relay tests).
tesela-relay = { path = "../tesela-relay" }
axum = { workspace = true }

[features]
# Pulls in the binary scaffolding so `cargo run --bin uniffi-bindgen
# --features cli` can generate Swift / Kotlin / Python bindings from
# the crate's #[uniffi::export] proc-macros.
cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]
