[package]
name = "tesela-sync"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
tesela-core = { path = "../tesela-core" }

# Serialization + wire format
serde.workspace = true
postcard.workspace = true

# Identity + hashing
uuid.workspace = true
blake3.workspace = true

# Time / HLC
chrono.workspace = true
uhlc.workspace = true

# Errors + tracing
thiserror.workspace = true
tracing.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

# Database
sqlx.workspace = true

# LAN discovery (Phase 2.1)
mdns-sd.workspace = true

# Pairing code encoding (Phase 2.2)
base64.workspace = true
rand.workspace = true

# AEAD on sync envelopes (Phase 2.3)
chacha20poly1305.workspace = true

# Per-request MAC + per-group auth-key derivation for the WAN relay
# (`crypto::relay_auth`). RustCrypto family — small + audited, no
# openssl dep. WebCrypto on the Worker side speaks these same
# primitives natively for the future TS impl.
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
