[package]
name = "tesela-sync"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
tesela-core = { path = "../tesela-core" }

# Serialization + wire format
serde.workspace = true
postcard.workspace = true

# Identity + hashing
uuid.workspace = true
blake3.workspace = true

# Time / HLC
chrono.workspace = true
uhlc.workspace = true

# Errors + tracing
thiserror.workspace = true
tracing.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

# Database
sqlx.workspace = true

# LAN discovery (Phase 2.1)
mdns-sd.workspace = true

# Pairing code encoding (Phase 2.2)
base64.workspace = true
rand.workspace = true

# AEAD on sync envelopes (Phase 2.3)
chacha20poly1305.workspace = true

# Per-request MAC + per-group auth-key derivation for the WAN relay
# (`crypto::relay_auth`). RustCrypto family — small + audited, no
# openssl dep. WebCrypto on the Worker side speaks these same
# primitives natively for the future TS impl.
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client for `transport::relay::RelayClient`. JSON-only feature
# set keeps the binary smaller; rustls so we don't pull openssl.
reqwest.workspace = true
serde_json.workspace = true

# Loro CRDT — the migration target (decisions.md 2026-05-27). Currently
# only used by `LoroEngine` behind the `TESELA_LORO_DUAL_WRITE` flag;
# becomes the sole data layer after cutover.
# 1.13: fixes the richtext apply panic on out-of-order/disjoint update import
# (1.13.3 8d258cb) + makes update imports ATOMIC with rollback on state-apply
# failure (1.13.2 7dfda87), so a bad frame errors cleanly instead of crashing
# / poisoning the doc — the 2026-06-26 desktop crash-loop. decisions.md.
loro = "1.13"

# DEFLATE for the relay payload — Loro snapshots are text-heavy and
# compress ~3-4×, keeping large notes under the relay body limit. Pure
# Rust, already in the tree transitively.
miniz_oxide = "0.8"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
