[package]
name = "tesela-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tesela-tui"
path = "src/main.rs"

[dependencies]
tesela-core = { path = "../tesela-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fuzzy-matcher = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
